--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-18 Thu 17:29]
+#+CAPTION: Clock summary at [2018-10-18 Thu 18:26]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *31:55* |       |       |   0.0 |
+| *Total time*                                                                | *32:09* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 31:55   |       |       |   0.0 |
-| Active                                                                      |         | 31:55 |       |   0.0 |
+| Stories                                                                     | 32:09   |       |       |   0.0 |
+| Active                                                                      |         | 32:09 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:46 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -42,7 +42,7 @@
 | Check that C++ 17 is enabled on MSVC                                        |         |       |  0:22 |   0.0 |
 | Fix warnings on OSX                                                         |         |       |  0:34 |   0.0 |
 | Rename input models directory to just models                                |         |       |  0:16 |   0.0 |
-| Fix warnings on windows                                                     |         |       |  0:17 |   0.0 |
+| Fix warnings on windows                                                     |         |       |  0:31 |   0.0 |
 | Read up on framework and API design                                         |         |       |  1:23 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 10:52 |   0.0 |
 | Reduce build times                                                          |         |       |  0:20 |   0.0 |
@@ -531,6 +531,7 @@ conventions.
 
 *** STARTED Fix warnings on windows                                   :story:
     :LOGBOOK:
+    CLOCK: [2018-10-18 Thu 18:12]--[2018-10-18 Thu 18:26] =>  0:14
     CLOCK: [2018-10-17 Wed 13:47]--[2018-10-17 Wed 14:04] =>  0:17
     :END:
 
@@ -601,6 +602,19 @@ unused types and remove them.
 Add extension to log file name so that we can see both Dia and JSON
 logs at the same time. At present, one overwrites the other because we
 do not have the frontend (e.g. the extension) on the log file name.
+
+*** STARTED Get JSON models to generate again
+    :LOGBOOK:
+    CLOCK: [2018-10-18 Thu 18:35]--[2018-10-18 Thu 19:17] =>  0:42
+    :END:
+
+Problems:
+
+- we are adding the extension to the dia filename because of how CMake
+  works. We should probably remove the output parameter or at least
+  allow defaulting it to a replacement of the extension.
+- we are removing the dependencies due to duplicates in JSON keys.
+- we are looking for .dia diagrams instead of .json for references.
 
 *** Update static strings to string views                             :story:
 
