--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-18 Thu 20:36]
+#+CAPTION: Clock summary at [2018-10-19 Fri 09:54]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:19* |       |       |   0.0 |
+| *Total time*                                                                | *35:01* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:19   |       |       |   0.0 |
-| Active                                                                      |         | 33:19 |       |   0.0 |
+| Stories                                                                     | 35:01   |       |       |   0.0 |
+| Active                                                                      |         | 35:01 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:59 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -43,8 +43,8 @@
 | Fix warnings on OSX                                                         |         |       |  0:34 |   0.0 |
 | Rename input models directory to just models                                |         |       |  0:16 |   0.0 |
 | Get JSON models to generate again                                           |         |       |  0:57 |   0.0 |
-| Fix warnings on windows                                                     |         |       |  0:31 |   0.0 |
-| Read up on framework and API design                                         |         |       |  1:23 |   0.0 |
+| Fix warnings on windows                                                     |         |       |  1:48 |   0.0 |
+| Read up on framework and API design                                         |         |       |  1:48 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 10:52 |   0.0 |
 | Reduce build times                                                          |         |       |  0:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -548,6 +548,7 @@ Problems:
 
 *** STARTED Fix warnings on windows                                   :story:
     :LOGBOOK:
+    CLOCK: [2018-10-19 Fri 08:10]--[2018-10-19 Fri 09:27] =>  1:17
     CLOCK: [2018-10-18 Thu 18:12]--[2018-10-18 Thu 18:26] =>  0:14
     CLOCK: [2018-10-17 Wed 13:47]--[2018-10-17 Wed 14:04] =>  0:17
     :END:
@@ -561,8 +562,22 @@ fix them.
 : dogen.generation.cpp\src\types\formatters\test_data\class_implementation_formatter.cpp(212): warning C4267: 'initializing': conversion from 'size_t' to 'unsigned int'
 : dogen.generation.csharp\src\types\formatters\types\class_formatter.cpp(188): warning C4267: 'argument': conversion from 'size_t' to 'const unsigned int', possible loss of data
 
+Notes:
+
+- we need to add the same level of warnings on GCC so that we can see
+  them locally without having to do a windows build, and so that we do
+  not introduce regressions.
+
+Links:
+
+- [[https://stackoverflow.com/questions/36834799/whats-the-best-strategy-to-get-rid-of-warning-c4267-possible-loss-of-data][What's the best strategy to get rid of “warning C4267 possible loss
+  of data”?]]
+- [[https://stackoverflow.com/questions/2771538/why-doesnt-gcc-produce-a-warning-when-assigning-a-signed-literal-to-an-unsigned][Why doesn't GCC produce a warning when assigning a signed literal to
+  an unsigned type?]]
+
 *** STARTED Read up on framework and API design                       :story:
     :LOGBOOK:
+    CLOCK: [2018-10-19 Fri 09:28]--[2018-10-19 Fri 09:53] =>  0:25
     CLOCK: [2018-10-18 Thu 09:36]--[2018-10-18 Thu 09:56] =>  0:20
     CLOCK: [2018-10-17 Wed 14:05]--[2018-10-17 Wed 14:19] =>  0:14
     CLOCK: [2018-10-17 Wed 10:03]--[2018-10-17 Wed 10:52] =>  0:49
@@ -613,6 +628,67 @@ Notes:
 Even after offloading all of the test models, we are still breaching
 Travis and AppVeyor limits. We need to figure out if we have any
 unused types and remove them.
+
+*** Create a single binary for all of dogen                           :story:
+
+As per analysis, we need to create a single dogen binary, like so:
+
+: dogen.cli COMMAND COMMAND_SPECIFIC_OPTIONS
+
+Where =COMMAND= is:
+
+- =transform=: functionality that is currently in tailor.
+- =generate=: functionality that is currently in knitter.
+- =expand=: functionality that is currently in stitcher plus expansion
+  of wale templates.
+- =make=: functionality in darter: create project, structure etc.
+
+In order to support sub-commands we need to do a lot of hackery with
+program options:
+
+- [[https://gist.github.com/randomphrase/10801888][cmdoptions.cpp]]: Demonstration of how to do subcommand option
+  processing with boost program_options
+- [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
+
+*Merged Stories*
+
+We started off by creating lots of little executables: knitter,
+darter, tailor, stitcher. Each of these has its own project,
+command-line options etc. However, now that we are concentrating all
+of the domain knowledge in yarn, it seems less useful to have so many
+executables that are simply calling yarn transforms. Instead, it may
+make more sense to use an approach similar to git and have a
+"sub-command":
+
+: dogen knit
+: dogen tailor
+
+And so forth. Of course, we could also take this opportunity and clean
+up these names to making them more meaningful to end users. Perhaps:
+
+: dogen codegen
+: dogen transform
+
+Each of these sub-commands or modes would have their own set of
+associated options. We need to figure out how this is done using boost
+program options. We also need to spend a bit of time working out the
+sub-commands to make sure they make sense across the board.
+
+In terms of names, we can't really call the project "dogen". We should
+call it something allusive to the command line, such as cli. However,
+the final binary should be called dogen or perhaps, =dogen.cli=. This
+fits in with other binaries such as =dogen.web=, =dogen.http=,
+=dogen.gui= etc.
+
+*** Add support for inline namespaces                                 :story:
+
+Enable c++17. - windows requires cpp latest. Then fix inner namespaces
+(e.g. a::b::c).
+
+We still need to support the old syntax for pre c++-17.
+
+We need to add a new standard to =quilt.cpp= and when its set to
+c++-17 we should automatically use inline namespaces.
 
 *** Problems in tailor generation of dogen models                     :story:
 
