--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-19 Fri 22:23]
+#+CAPTION: Clock summary at [2018-10-19 Fri 22:40]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:25* |       |       |   0.0 |
+| *Total time*                                                                | *44:42* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:25   |       |       |   0.0 |
-| Active                                                                      |         | 44:25 |       |   0.0 |
+| Stories                                                                     | 44:42   |       |       |   0.0 |
+| Active                                                                      |         | 44:42 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -47,7 +47,7 @@
 | Fix warnings on windows                                                     |         |       |  3:44 |   0.0 |
 | Read up on framework and API design                                         |         |       |  2:05 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 11:40 |   0.0 |
-| Reduce build times                                                          |         |       |  4:01 |   0.0 |
+| Reduce build times                                                          |         |       |  4:18 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -654,6 +654,7 @@ Notes:
 
 *** STARTED Reduce build times                                        :story:
     :LOGBOOK:
+    CLOCK: [2018-10-19 Fri 22:23]--[2018-10-19 Fri 22:40] =>  0:17
     CLOCK: [2018-10-19 Fri 22:06]--[2018-10-19 Fri 22:22] =>  0:16
     CLOCK: [2018-10-19 Fri 20:31]--[2018-10-19 Fri 22:01] =>  1:30
     CLOCK: [2018-10-19 Fri 18:20]--[2018-10-19 Fri 18:46] =>  0:26
@@ -678,7 +679,8 @@ some tests, though they have probably bit-rotted. We probably should
 use serialisation only for round-trip tests and not as a way of
 testing components as we did in the past. We should remove all tests
 that rely on serialisation, even including dia - it should be replaced
-by the XML tool anyway, so no point in paying the cost now.
+by the XML tool anyway, so no point in paying the cost now. Or perhaps
+we can leave dia for last and do all other models.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
