--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-19 Fri 22:40]
+#+CAPTION: Clock summary at [2018-10-20 Sat 07:44]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:42* |       |       |   0.0 |
+| *Total time*                                                                | *44:51* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:42   |       |       |   0.0 |
-| Active                                                                      |         | 44:42 |       |   0.0 |
+| Stories                                                                     | 44:51   |       |       |   0.0 |
+| Active                                                                      |         | 44:51 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -44,7 +44,7 @@
 | Rename input models directory to just models                                |         |       |  0:16 |   0.0 |
 | Get JSON models to generate again                                           |         |       |  0:57 |   0.0 |
 | Update emacs programming setup                                              |         |       |  0:41 |   0.0 |
-| Fix warnings on windows                                                     |         |       |  3:44 |   0.0 |
+| Fix warnings on windows                                                     |         |       |  3:53 |   0.0 |
 | Read up on framework and API design                                         |         |       |  2:05 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 11:40 |   0.0 |
 | Reduce build times                                                          |         |       |  4:18 |   0.0 |
@@ -561,6 +561,7 @@ Problems:
 
 *** STARTED Fix warnings on windows                                   :story:
     :LOGBOOK:
+    CLOCK: [2018-10-20 Sat 07:35]--[2018-10-20 Sat 07:44] =>  0:09
     CLOCK: [2018-10-19 Fri 22:01]--[2018-10-19 Fri 22:05] =>  0:04
     CLOCK: [2018-10-19 Fri 20:19]--[2018-10-19 Fri 20:30] =>  0:11
     CLOCK: [2018-10-19 Fri 17:00]--[2018-10-19 Fri 17:04] =>  0:04
@@ -604,6 +605,7 @@ Links:
 - [[https://stackoverflow.com/questions/18786690/cmake-for-def-and-nodefaultlib][CMAKE for /DEF and /NODEFAULTLIB]]
 - [[https://stackoverflow.com/questions/11512795/ignoring-unknown-option-nodefaultliblibcmtd][“Ignoring unknown option /NODEFAULTLIB:LIBCMTD”]]
 - [[http://cmake.3232098.n2.nabble.com/CMAKE-EXE-LINKER-FLAGS-for-shared-libraries-td7087564.html][CMAKE_EXE_LINKER_FLAGS for shared libraries?]]
+- [[https://cmake.org/pipermail/cmake/2012-March/049621.html][how to determine debug or release mode?]]
 
 *** STARTED Read up on framework and API design                       :story:
     :LOGBOOK:
