--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-20 Sat 07:44]
+#+CAPTION: Clock summary at [2018-10-20 Sat 14:05]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:51* |       |       |   0.0 |
+| *Total time*                                                                | *46:01* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:51   |       |       |   0.0 |
-| Active                                                                      |         | 44:51 |       |   0.0 |
+| Stories                                                                     | 46:01   |       |       |   0.0 |
+| Active                                                                      |         | 46:01 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:02 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -44,9 +44,9 @@
 | Rename input models directory to just models                                |         |       |  0:16 |   0.0 |
 | Get JSON models to generate again                                           |         |       |  0:57 |   0.0 |
 | Update emacs programming setup                                              |         |       |  0:41 |   0.0 |
-| Fix warnings on windows                                                     |         |       |  3:53 |   0.0 |
+| Fix warnings on windows                                                     |         |       |  4:15 |   0.0 |
 | Read up on framework and API design                                         |         |       |  2:05 |   0.0 |
-| Design a top-level Dogen API                                                |         |       | 11:40 |   0.0 |
+| Design a top-level Dogen API                                                |         |       | 12:28 |   0.0 |
 | Reduce build times                                                          |         |       |  4:18 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -561,6 +561,8 @@ Problems:
 
 *** STARTED Fix warnings on windows                                   :story:
     :LOGBOOK:
+    CLOCK: [2018-10-20 Sat 14:01]--[2018-10-20 Sat 14:05] =>  0:04
+    CLOCK: [2018-10-20 Sat 13:10]--[2018-10-20 Sat 13:28] =>  0:18
     CLOCK: [2018-10-20 Sat 07:35]--[2018-10-20 Sat 07:44] =>  0:09
     CLOCK: [2018-10-19 Fri 22:01]--[2018-10-19 Fri 22:05] =>  0:04
     CLOCK: [2018-10-19 Fri 20:19]--[2018-10-19 Fri 20:30] =>  0:11
@@ -591,6 +593,10 @@ Notes:
 - we need to add the same level of warnings on GCC so that we can see
   them locally without having to do a windows build, and so that we do
   not introduce regressions.
+- it seems we now have the right incantation but the problem is we are
+  not picking up the =CMAKE_BUILD_TYPE=. This works on all platforms
+  but not on windows for some reason. CTest also thinks its a debug
+  build, but its not clear CMake does.
 
 Links:
 
@@ -606,6 +612,7 @@ Links:
 - [[https://stackoverflow.com/questions/11512795/ignoring-unknown-option-nodefaultliblibcmtd][“Ignoring unknown option /NODEFAULTLIB:LIBCMTD”]]
 - [[http://cmake.3232098.n2.nabble.com/CMAKE-EXE-LINKER-FLAGS-for-shared-libraries-td7087564.html][CMAKE_EXE_LINKER_FLAGS for shared libraries?]]
 - [[https://cmake.org/pipermail/cmake/2012-March/049621.html][how to determine debug or release mode?]]
+- [[https://stackoverflow.com/questions/24460486/cmake-build-type-not-being-used-in-cmakelists-txt][CMAKE_BUILD_TYPE not being used in CMakeLists.txt]]
 
 *** STARTED Read up on framework and API design                       :story:
     :LOGBOOK:
